<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="exit">Exit</string>
    <string name="introMenu">Intro/Setup Wizard</string>
    <string name="app_name" translatable="false">EX-Toolbox</string>
    <string name="app_description">EX-Toolbox - DCC-EX toolbox for your Android phone.  This application can connect to a DCC-EX EX-CommandStation. </string>
    <string name="app_name_intro">Introduction</string>
    <string name="app_name_connect">Connect to Server</string>
    <string name="app_name_power_control">Power Control</string>
    <string name="app_name_about">About</string>
    <string name="app_name_preferences">Preferences</string>
    <string name="app_name_log_viewer">Log Viewer</string>
    <string name="app_name_reconnect_status">Reconnect Status</string>
    <string name="app_name_reconnect_status_long">EX-Toolbox - Reconnect Status</string>
    <string name="app_name_cv_programmer">CV Programmer</string>
    <string name="app_name_cv_programmer_short">CVc</string>
    <string name="app_name_servos">Servo Programmer</string>
    <string name="app_name_servos_short">Servos</string>
    <string name="app_name_track_manager">Track Manager</string>
    <string name="app_name_track_manager_short">Track Mgr</string>
    <string name="app_name_speed_matching">Speed Matching (PoM)</string>
    <string name="app_name_speed_matching_short">Speed Match</string>
    <string name="app_name_sensors">Sensor Status</string>
    <string name="app_name_sensors_short">Sensors</string>
    <string name="app_name_locos">Loco Status</string>
    <string name="app_name_locos_short">Locos</string>
    <string name="app_name_currents">Current Status</string>
    <string name="app_name_currents_short">Currents</string>
    <string name="app_name_neopixel">Neopixel Setup</string>
    <string name="app_name_neopixel_short">Neopixel</string>
    <string name="app_name_wifi">WiFi Setup</string>
    <string name="app_name_wifi_short">WiFi</string>
    <string name="app_name_roster">Roster</string>
    <string name="app_name_speed_trap">Speedometer</string>
    <string name="app_name_dcc_ex">DCC-EX</string>
    <string name="menu_item_name_extras">\☰ Additional Options</string>
    <string name="menu_item_name_preferences">Preferences</string>
    <string name="menu_item_name_about">About</string>
    <string name="menu_item_name_logViewer">View Log</string>
    <string name="notification_title">EX-Toolbox is running</string>
    <string name="notification_text">Tap to reopen EX-Toolbox</string>
    <string name="host_ip">Host Name or Address</string>
    <string name="port">Port</string>
    <string name="connect_button">Connect</string>
    <string name="recent_connections">Recent Servers</string>
    <string name="discovered_services">Discovered Servers - WiFi: %1$s</string>
    <string name="none">None</string>
    <string name="about">About</string>
    <string name="about_page_url">file:///android_asset/about_page.html</string>
    <string name="blank_page_url">file:///android_asset/blank_page.html</string>
    <string name="powerWillNotWorkTitle">Will Not Work!</string>
    <string name="powerWillNotWork">Server has the wiThrottle power control setting to off.\nWill now remove Power Icon.\nWill display again when Server setting is on.</string>
    <string name="power_control_label">Control Layout Power Setting</string>
    <string name="power_control_button">unknown</string>
    <string name="press_to_toggle">Press button to toggle layout power state.</string>
    <string name="power_control_not_allowed">Power Control not allowed.  Change in Preferences/Settings on server.</string>
    <string name="reconnect_label">Reconnect Attempt Status</string>
    <string name="reconnect_help">Attempting to Reconnect automatically.  Wait for Reconnection or press BackArrow to Exit.</string>
    <string name="reconnect_success">RECONNECTED.  Resuming normal operation.</string>
    <string name="ca_recent_conn_notice">Recent Connections unavailable - No SD card found.</string>
    <string name="power">Power</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="set">Set</string>
    <string name="disabled">Disabled</string>
    <string name="close_button">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">"OK"</string>
    <string name="cancel">"Cancel"</string>
    <string name="exit_text">Exit EX-Toolbox?</string>
    <string name="exit_title">Exit</string>
    <string name="logviewerClose">Close</string>
    <string name="logviewerSave">Start</string>
    <string name="logviewerStopSave">Stop</string>
    <string name="logviewerShare">Share</string>
    <string name="shareFileDialogTitle">Select a File to Share</string>
    <string name="shareFile">Share File: %s</string>
    <string name="toastNoAppToShare">No app found to share the file</string>
    <string name="sharedFileProcessing">Processing shared file(s)...</string>
    <string name="prefSummary">Preferences for EX-Toolbox</string>
    <string name="prefConnectTitle">Connect Preferences</string>
    <string name="prefMaximumRecentConnectionsTitle">Maximum Recent Connections</string>
    <string name="prefMaximumRecentConnectionsDefaultValue" translatable="false">10</string>
    <string name="prefMaximumRecentConnectionsSummary">Maximum Recent Connections to show in list</string>
    <string name="prefConnectTimeoutMsTitle">Initial Connection Timeout</string>
    <string name="prefConnectTimeoutMsSummary">Set initial connection timeout in milliseconds</string>
    <string name="prefConnectTimeoutMsDefaultValue" translatable="false">3000</string>
    <string name="prefSocketTimeoutMsTitle">Socket Timeout</string>
    <string name="prefSocketTimeoutMsSummary">Set socket read timeout in milliseconds</string>
    <string name="prefSocketTimeoutMsDefaultValue" translatable="false">500</string>
    <string name="prefHeartbeatResponseFactorTitle">Heartbeat Response Factor</string>
    <string name="prefHeartbeatResponseFactorSummary">Percentage of the heartbeat period for when to send the heartbeat (50%-90%).\nWill take effect on next connection.</string>
    <string name="prefHeartbeatResponseFactorDefaultValue" translatable="false">80</string>
    <string name="prefDoubleBackButtonToExitTitle">Double Back button to Exit?</string>
    <string name="prefDoubleBackButtonToExitSummary">Pressing the Android \'Back\' button twice within 3 seconds on the \'Throttle\' or \'Connection\' screen will exit EX-Toolbox</string>
    <string name="PowerButtonBar">power_button</string>
    <string name="prefPowerButtonBarTitle">Layout Power button?</string>
    <string name="prefPowerButtonBarSummary">Show Layout Power button in action bar</string>
    <string name="prefShowToolbarCvProgrammerMenuButtonsTitle">CV Programmer toolbar button</string>
    <string name="prefShowToolbarMenuButtonsSummary">Show additional toolbar button.\nMay require EX-Toolbox to be restarted.</string>
    <string name="prefShowToolbarLocosMenuButtonsTitle">Locos toolbar button</string>
    <string name="prefShowToolbarCurrentsMenuButtonsTitle">Currents toolbar button</string>
    <string name="prefShowToolbarSensorsMenuButtonsTitle">Sensors toolbar button</string>
    <string name="prefShowToolbarServosMenuButtonsTitle">Servos toolbar button</string>
    <string name="prefShowToolbarTrackManagerMenuButtonsTitle">Track Manager toolbar button</string>
    <string name="prefShowToolbarSpeedMatchingMenuButtonsTitle">Speed Matching toolbar button</string>
    <string name="prefShowToolbarRosterMenuButtonsTitle">Roster toolbar button</string>
    <string name="PrefConnectToFirstServerTitle">Auto-Connect to Server?</string>
    <string name="PrefConnectToFirstServerSummary">Connect automatically to \'first\' Server discovered</string>
    <string name="prefDisplayClockTitle">Fast Clock Display</string>
    <string name="prefDisplayClockSummary">Set format for Fast Clock display in action bar</string>
    <string name="prefDisplayClockDefaultValue" translatable="false">0</string>
    <string name="prefShowAdvancedPreferencesTitle">Show Advanced Preferences?</string>
    <string name="prefShowAdvancedPreferencesSummary">Show or hide less common preferences</string>
    <string name="prefThemeTitle">Theme/Style</string>
    <string name="prefThemeSummary">Select a visual appearance for this app</string>
    <string name="prefThemeDefaultValue" translatable="false">Default</string>
    <string name="prefThrottleImportExportTitle">Import/Export/Reset &amp; Log Preferences</string>
    <string name="prefThrottleImportExportSummary">Import/Export/Reset and Log Preferences</string>
    <string name="prefImportExportTitle">Import, Export or Reset</string>
    <string name="prefImportExportSummary">\'Import\' or \'Export\' preferences to the \'\\Android\\data\\dcc_ex.ex_toolbox\\files\\\' folder, or \'Reset\' them.\nWill occur IMMEDIATELY on selecting the option.\nWARNING! With \'Reset\' and \'Import\', EX-Toolbox will restart!\n(You can transfer the preferences to a different phone by copying the file.)</string>
    <string name="prefImportExportDefaultValue" translatable="false">None</string>
    <string name="prefAllowMobileDataTitle">Mobile Data connection?</string>
    <string name="prefAllowMobileDataSummary">Allow your device to connect to JMRI over Mobile Data</string>
    <string name="prefActionBarShowServerDescriptionTitle">Show Server Description</string>
    <string name="prefActionBarShowServerDescriptionSummary">Show the description of the current server on the action bar</string>
    <string name="prefBackgroundImagePreferencesTitle">Background Image Preferences</string>
    <string name="prefBackgroundImageTitle">Background Image</string>
    <string name="prefBackgroundImageSummary">Show a background image on the Throttle screen</string>
    <string name="prefBackgroundImageFileNameTitle">Background Image File Name</string>
    <string name="prefBackgroundImageFileNameSummary">Enter the name of the background image file.</string>
    <string name="prefBackgroundImagePositionTitle">Background Image Position</string>
    <string name="prefBackgroundImagePositionSummary">Select how the background image will be positioned on the screen.</string>
    <string name="prefBackgroundImagePositionDefaultValue" translatable="false">FIT_CENTER</string>
    <string name="prefCategoryDevicePageTitle">Device Preferences</string>
    <string name="prefHapticFeedbackPageTitle">Haptic Feedback Preferences</string>
    <string name="prefActionBarPageTitle">Action bar Preferences</string>
    <string name="prefShowTimeOnLogEntryTitle">Show Timestamps on Log?</string>
    <string name="prefShowTimeOnLogEntrySummary">Show Date Time for each entry on the log screen</string>
    <string name="prefFeedbackOnDisconnectTitle">Feedback on Disconnect</string>
    <string name="prefFeedbackOnDisconnectSummary">Play sound and vibrate on unexpected disconnect</string>
    <string name="prefFeedbackWhenGoingToBackgroundTitle">Background Alert</string>
    <string name="prefFeedbackWhenGoingToBackgroundSummary">Audible alert when the app is sent to the background</string>
    <string name="prefHapticFeedbackTitle">Haptic Feedback (Vibration)</string>
    <string name="prefHapticFeedbackSummary">Haptic feedback (vibrate) on speed changes</string>
    <string name="prefHapticFeedbackDurationTitle">Haptic Feedback Duration</string>
    <string name="prefHapticFeedbackDurationSummary">Duration of each vibration (in milliseconds).</string>
    <string name="prefHapticFeedbackDurationDefaultValue" translatable="false">"25"</string>
    <string name="prefHapticFeedbackButtonsTitle">Haptic Feedback on Button Presses</string>
    <string name="prefHapticFeedbackButtonsSummary">Haptic feedback (vibrate) on button presses.</string>
</resources>